--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -811,12 +811,6 @@ div[class$="inset-text"] > ol li:last-child {
   border-width: 1px;
 }
 
-@include govuk-media-query($until: tablet) {
-  .opss-border-all {
-    padding: govuk-spacing(0) !important;
-  }
-}
-
 .opss-details--sm {
   @include govuk-media-query($from: desktop) {
     summary {
@@ -1175,7 +1169,6 @@ dl.opss-summary-list-aside {
 
     dt,
     dd {
-      @include opss-font-size($s: 16px, $l: 1.2);
       padding-top: govuk-spacing(1);
       padding-bottom: govuk-spacing(1);
     }
@@ -1222,21 +1215,43 @@ dl.opss-summary-list-aside {
   }
 }
 
-// bespoke styles for Cases accordian section on a product page ... starts
-.opss-summary-list-mixed.opss-summary-list-mixed--4-cols dt {
-  width: 35%;
+.opss-summary-list-mixed.opss-summary-list-mixed--sm-font {
+  dt,
+  dd {
+    @include opss-font-size($s: 16px, $l: 1.2);
+  }
 }
 
-.opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd,
-.opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd + dd {
-  width: 25%;
+@include govuk-media-query($until: desktop) {
+  // bespoke styles for Cases accordian section on a product page
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dt,
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd {
+    width: 100% !important;
+    display: revert;
+  }
 }
 
-.opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd:last-of-type {
-  width: 15%;
-}
+@include govuk-media-query($from: desktop) {
+  // bespoke styles for Cases accordian section on a product page
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dt {
+    width: 35%;
+  }
 
-// bespoke styles for Cases accordian section on a product page ... ends
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd,
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd + dd {
+    width: 25%;
+  }
+
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd:last-of-type {
+    width: 15%;
+  }
+
+  .opss-summary-list-mixed.opss-summary-list-mixed--4-cols dd {
+    .opss-tag--plain {
+      min-width: auto;
+    }
+  }
+}
 
 dd dl.opss-nested-definition-list {
   margin: 0;
