--- a/app/views/recall/inc_online-marketplaces-error.html
+++ b/app/views/recall/inc_online-marketplaces-error.html
@@ -11,77 +11,77 @@
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
 
-          <div class="govuk-checkboxes govuk-checkboxes--small">
+          <div class="govuk-radios govuk-radios--small">
 
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-1" name="market" type="checkbox" value="marketplace-1">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-1">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-1" name="market" type="radio" value="marketplace-1">
+              <label class="govuk-label govuk-radios__label" for="marketplace-1">
                 Amazon.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-2" name="market" type="checkbox" value="marketplace-2">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-2">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-2" name="market" type="radio" value="marketplace-2">
+              <label class="govuk-label govuk-radios__label" for="marketplace-2">
                 eBay.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-3" name="market" type="checkbox" value="marketplace-3">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-3">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-3" name="market" type="radio" value="marketplace-3">
+              <label class="govuk-label govuk-radios__label" for="marketplace-3">
                 Aliexpress.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-4" name="organisation" type="checkbox" value="marketplace-4">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-4">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-4" name="market" type="radio" value="marketplace-4">
+              <label class="govuk-label govuk-radios__label" for="marketplace-4">
                 Wish.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-5" name="market" type="checkbox" value="marketplace-5">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-5">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-5" name="market" type="radio" value="marketplace-5">
+              <label class="govuk-label govuk-radios__label" for="marketplace-5">
                 Etsy.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-6" name="market" type="checkbox" value="marketplace-6">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-6">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-6" name="market" type="radio" value="marketplace-6">
+              <label class="govuk-label govuk-radios__label" for="marketplace-6">
                 folksy.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-7" name="market" type="checkbox" value="marketplace-7">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-7">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-7" name="market" type="radio" value="marketplace-7">
+              <label class="govuk-label govuk-radios__label" for="marketplace-7">
                 fruugo.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-8" name="organisation" type="checkbox" value="marketplace-8">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-8">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-8" name="market" type="radio" value="marketplace-8">
+              <label class="govuk-label govuk-radios__label" for="marketplace-8">
                 onbuy.com/gb/
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-10" name="market" type="checkbox" value="marketplace-10">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-10">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-10" name="market" type="radio" value="marketplace-10">
+              <label class="govuk-label govuk-radios__label" for="marketplace-10">
                 notonthehighstreet.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-11" name="market" type="checkbox" value="marketplace-11">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-11">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-11" name="market" type="radio" value="marketplace-11">
+              <label class="govuk-label govuk-radios__label" for="marketplace-11">
                 manomano.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-12" name="market" type="checkbox" value="marketplace-12">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-12">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-12" name="market" type="radio" value="marketplace-12">
+              <label class="govuk-label govuk-radios__label" for="marketplace-12">
                 pinterest.co.uk/
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-13" name="market" type="checkbox" value="marketplace-13">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-13">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-13" name="market" type="radio" value="marketplace-13">
+              <label class="govuk-label govuk-radios__label" for="marketplace-13">
                 wayfair.co.uk
               </label>
             </div>
@@ -92,77 +92,77 @@
 
         <div class="govuk-grid-column-one-half govuk-!-padding-right-0">
 
-          <div class="govuk-checkboxes govuk-checkboxes--small" data-module="govuk-checkboxes">
+          <div class="govuk-radios govuk-radios--small" data-module="govuk-checkboxes">
 
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-14" name="market" type="checkbox" value="marketplace-14">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-14">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-14" name="market" type="radio" value="marketplace-14">
+              <label class="govuk-label govuk-radios__label" for="marketplace-14">
                 houzz.co.uk/products
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-15" name="organisation" type="checkbox" value="marketplace-15">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-15">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-15" name="market" type="radio" value="marketplace-15">
+              <label class="govuk-label govuk-radios__label" for="marketplace-15">
                 gumtree.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-16" name="market" type="checkbox" value="marketplace-16">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-16">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-16" name="market" type="radio" value="marketplace-16">
+              <label class="govuk-label govuk-radios__label" for="marketplace-16">
                 shpock.com/en-gb
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-17" name="market" type="checkbox" value="marketplace-17">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-17">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-17" name="market" type="radio" value="marketplace-17">
+              <label class="govuk-label govuk-radios__label" for="marketplace-17">
                 stockx.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-18" name="market" type="checkbox" value="marketplace-18">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-18">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-18" name="market" type="radio" value="marketplace-18">
+              <label class="govuk-label govuk-radios__label" for="marketplace-18">
                 vinted.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-19" name="organisation" type="checkbox" value="marketplace-19">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-19">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-19" name="market" type="radio" value="marketplace-19">
+              <label class="govuk-label govuk-radios__label" for="marketplace-19">
                 shein.co.uk/
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-20" name="market" type="checkbox" value="marketplace-20">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-20">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-20" name="market" type="radio" value="marketplace-20">
+              <label class="govuk-label govuk-radios__label" for="marketplace-20">
                 farfetch.com/uk/
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-21" name="market" type="checkbox" value="marketplace-21">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-21">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-21" name="market" type="radio" value="marketplace-21">
+              <label class="govuk-label govuk-radios__label" for="marketplace-21">
                 Depop.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-22" name="market" type="checkbox" value="marketplace-22">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-22">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-22" name="market" type="radio" value="marketplace-22">
+              <label class="govuk-label govuk-radios__label" for="marketplace-22">
                 Marketplace.asos.com
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-23" name="market" type="checkbox" value="marketplace-23">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-23">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-23" name="market" type="radio" value="marketplace-23">
+              <label class="govuk-label govuk-radios__label" for="marketplace-23">
                 zalando.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-24" name="market" type="checkbox" value="marketplace-24">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-24">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-24" name="market" type="radio" value="marketplace-24">
+              <label class="govuk-label govuk-radios__label" for="marketplace-24">
                 AbeBooks.co.uk
               </label>
             </div>
-            <div class="govuk-checkboxes__item">
-              <input class="govuk-checkboxes__input" id="marketplace-9" name="market" type="checkbox" value="marketplace-9">
-              <label class="govuk-label govuk-checkboxes__label" for="marketplace-9">
+            <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="marketplace-9" name="market" type="radio" value="marketplace-9">
+              <label class="govuk-label govuk-radios__label" for="marketplace-9">
                 en-gb.facebook.com/<br>marketplace/
               </label>
             </div>
@@ -177,9 +177,12 @@
 
     <div class="govuk-form-group govuk-form-group--error">
       <label class="govuk-label" for="marketplace-25">
-        Other marketplaces
+        Other marketplace
       </label>
-      <input class="govuk-input" id="marketplace-25" name="marketplace-25" type="text">
+      <div class="govuk-hint govuk-!-font-size-16" id="marketplace-25-hint">
+        Enter a web address.
+      </div>
+      <input class="govuk-input" id="marketplace-25" name="marketplace-25" type="text" aria-describedby="marketplace-25-hint">
     </div>
 
   </div>
