--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,7 +51,7 @@
 
  <p><a href="indexxx">Index with links</a></p>
 
- <p><a href="/psd-revised-flow/add-business-to-notification/notification-task-list.html">Add businesses to notification</a></p>
+ <p><a href="/psd-revised-flow/add-business-to-notification/start-page">Add businesses to notification</a></p>
 
 
 
