--- a/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
+++ b/app/views/psd-revised-flow/add-business-to-notification/search-companies-house.html
@@ -123,7 +123,7 @@
         <td class="govuk-table__cell">Holly Drive, Hay-on-Wye, Powys, HR3 5BT, UK</td>
       </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="duplicate-business">DREAM MANUFACTURING LTD</a></td>
+        <td class="govuk-table__cell"><a href="duplicate-business-ch-single">DREAM MANUFACTURING LTD</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">01169426</td>
         <td class="govuk-table__cell">Building 5, Willow Estate, Riber Road, Buxton, SK17 6BH, UK</td>
@@ -135,7 +135,7 @@
         <td class="govuk-table__cell">56 Maple Street, Uckfield, TN22 1PH, UK</td>
       </tr>
       <tr>
-        <td class="govuk-table__cell"><a href="#">DREAMTIME BEDDING LTD</a></td>
+        <td class="govuk-table__cell"><a href="duplicate-business-ch-multiple">DREAMTIME BEDDING LTD</a></td>
         <td class="govuk-table__cell">Active</td>
         <td class="govuk-table__cell">012823551</td>
         <td class="govuk-table__cell">72 Birchwood Road, Wotton-under-Edge, GL12 7AJ, UK</td>
